# django-blog-api

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
blog/: models.py  serializers.py  tests.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
